# food-watcher-ddd

./: .gitignore  Dockerfile  Makefile  README.md  deployment.py  docker-compose.testdb.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg
.github/workflows/: main.yml
backend/: .pylintrc  Dockerfile  docker-compose.dev.yml  pyproject.toml  requirements.txt
backend/src/api/: __main__.py  main.py
backend/src/api/routers/: auth.py
backend/src/api/shared/: __init__.py
backend/src/config/: INFO.md  __init__.py  api_config.py  container_ioc.py
backend/src/foundation/: INFO.md
backend/src/foundation/application/: decorators.py  modules.py
backend/src/foundation/domain/: entity.py  repository.py
backend/src/foundation/infrastructure/: json_data_mapper.py  logging.py  repository.py
backend/src/foundation/utils/: functional.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: dc187fcb5bff_add_a_column.py
backend/src/modules/auth/app/repository/: user.py
backend/src/modules/auth/app/usecases/command/: __init__.py
backend/src/modules/auth/app/usecases/dtos/: __init__.py  user.py
backend/src/modules/auth/domain/: entities.py  exceptions.py
backend/src/modules/auth/infra/models/: user.py
backend/src/modules/auth/infra/repository/: user.py
backend/src/modules/auth/infra/services/: authentication.py
backend/src/modules/auth/infra/usecases/command/: user.py
backend/src/modules/dummy/infra/adapters/: dummy_adapters.py
backend/watcher/api/: __init__.py  main.py  shared.py
backend/watcher/config/: container_ioc.py
backend/watcher/db/: base.py
backend/watcher/dummy/domain/ports/: dummy_ports.py
backend/watcher/dummy/infra/adapters/: dummy_adapters.py
src/api/: INFO.md  __main__.py  main.py  response.py  router_util.py  setup.py
src/api/__deprecated_routers/: __init__.py  chat.py
src/api/routers/: __init__.py  auth.py  base.py  chat.py  consumption.py  products.py  recipe.py  users.py
src/api/shared/: __init__.py  auth.py  (+4 more)
src/config/: __init__.py  api_config.py  config.py  container_ioc.py  di.py
src/migrations/: env.py
tests/: conftest.py
tests/fixtures/: auth.py
tests/integration/: conftest.py
(+271 files in other folders)
