[tool.poetry]
name = "food-watcher-ddd"
version = "0.1.0"
description = ""
authors = ["michalasia10 <misiek1027@o2.pl>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.10.0"
pytest = "^6.2.4"
pytest-postgresql = "^3.0.0"
pytest-cov = "^2.12.1"
pydantic = { extras = ["email"], version = "^1.10.5" }
babel = "^2.9.1"
black = "^21.5b1"
fastapi = "^0.92.0"
typer-cli = "^0.0.13"
flask_babel = "^2.0.0"
starlette-context = "^0.3.3"
SQLAlchemy = "^1.4.22"
dependency-injector = "^4.35.2"
colorlog = "^5.0.1"
python-json-logger = "^2.0.2"
alembic = "^1.7.3"
sqlalchemy-json = "^0.4.0"
typed-ast = "^1.4.3"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.2"
freezegun = "^1.1.0"
pyjwt = "^2.6.0"
passlib = "^1.7.4"
sqlalchemy-utils = "^0.40.0"
classy-fastapi = "^0.3.0"
aioredis = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
aio-pika = "^9.0.7"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
