[tool.poetry]
name = "food-watcher-ddd"
version = "0.1.0"
description = ""
authors = ["michalasia10 <misiek1027@o2.pl>"]


[tool.poetry.dependencies]
python = "^3.10.0"
pytest = "^6.2.4"
pydantic = "^1.8.2"
black = "^21.5b1"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
starlette-context = "^0.3.3"
SQLAlchemy = "^1.4.22"
dependency-injector = "^4.35.2"
colorlog = "^5.0.1"
python-json-logger = "^2.0.2"
alembic = "^1.7.3"
sqlalchemy-json = "^0.4.0"
typed-ast = "^1.4.3"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.2"
freezegun = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
#test = { shell = "DATABASE_URL=postgresql://postgres:password@localhost:5433/postgres pytest src" }
#test_coverage = "pytest --cov=src --cov-report=html"
start = "uvicorn src.api.main:app --reload"
start_db = "docker-compose -f docker-compose.dev.yml up -d"
migrate = "alembic upgrade head"
makemigration = "alembic revision --autogenerate -m 'Add a column'"

[tool.black]
exclude = 'tmp'